# dialoguer

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml
examples/: alert.rs  autocomplete.rs  buffered.rs  checkboxes.rs  completion.rs  confirm.rs  continue.rs  datetime.rs  edit.rs  editor.rs  folder_select.rs  fuzzypaging.rs  fuzzyselect.rs  history.rs  input.rs  input_mail.rs  multi_fuzzy_select.rs  multi_select.rs  multi_select_sort.rs  multiline_selection_options.rs  my_pr.rs  on_render.rs  orderlist.rs  paging.rs  password.rs  phone_number.rs  prompt_character.rs  readme.rs  select.rs  select_opt.rs  sort.rs  validate_input.rs  validation.rs  wizard.rs
examples/vhs/: confirm-with-default.tape  confirm.tape  editor.tape  fuzzy-select.tape  input.tape  multi-select.tape  password.tape  publish-all.sh  select.tape  sort.tape
src/: autocomplete.rs  completion.rs  datetime.rs  edit.rs  error.rs  history.rs  lib.rs  paging.rs  prompts.rs  select.rs  term.rs  theme.rs  validate.rs
src/prompts/: alert.rs  confirm.rs  dummy.rs  folder_select.rs  fuzzy.rs  fuzzy_select.rs  input.rs  mod.rs  multi_fuzzy_select.rs  multi_select.rs  multi_select_plus.rs  password.rs  select.rs  sort.rs
src/theme/: colorful.rs  mod.rs  render.rs
tests/: select.rs
