[package]
name = "dialoguer"
description = "A command line prompting library."
version = "0.8.0"
edition = "2018"
authors = [
	"Armin Ronacher <armin.ronacher@active-4.com>",
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
keywords = ["cli", "menu", "prompt"]
categories = ["command-line-interface"]
license = "MIT"
homepage = "https://github.com/mitsuhiko/dialoguer"
repository = "https://github.com/mitsuhiko/dialoguer"
documentation = "https://docs.rs/dialoguer"
readme = "README.md"

[features]
default = ["editor"]
editor = ["tempfile"]

[dependencies]
console = "0.14.1"
lazy_static = "1"
tempfile = { version = "3", optional = true }
zeroize = "1.1.1"

[[example]]
name = "buffered"
path = "examples/buffered.rs"

[[example]]
name = "confirm"
path = "examples/confirm.rs"

[[example]]
name = "editor"
path = "examples/editor.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "multi_select"
path = "examples/multi_select.rs"

[[example]]
name = "password"
path = "examples/password.rs"

[[example]]
name = "select"
path = "examples/select.rs"

[[example]]
name = "sort"
path = "examples/sort.rs"

[[example]]
name = "wizard"
path = "examples/wizard.rs"
